--- a/templates/antesInforme.html
+++ b/templates/antesInforme.html
@@ -2,13 +2,10 @@
     {% block central %}
     <div class="botonesInicio">
         <div class="botonMed1">
-            <a href="anamnesis.php">Anamnesis</a>
-        </div>
-        <div class="botonMed2">
-            <a href="revision.php">Revisiones</a>
+            <a href="informes.php">Generar informe</a>
         </div>
         <div class="botonMed3">
-            <a href="medicacion.php">Complementarias</a>
+            <a href="visualizar.php">Visualizar datos</a>
         </div>
     </div>
     {% endblock %}
