--- a/templates/cabecera.html
+++ b/templates/cabecera.html
@@ -1,45 +1,55 @@
-<!DOCTYPE html>
-<html>
-    <link rel="stylesheet" href="style/estilo.css" type="text/css">
+<!doctype html>
+<html lang="es">
 
-<body>
-  <!--Lo que está en el body su lo va a ver el usuario en la web-->
-    <img src="img/logo.png" style="width: 100px; display: block; margin: 0 auto;" id="imagenLogo">
+<link rel="stylesheet" href="style/estilo.css" type="text/css">
 
+<head>
+  <!-- Lo que está en el head va al navegador y no lo ve el usuario -->
+  <title> mediFore </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="consulta de medicina interna">
 
-    <h1> mediFore: Medicina Interna</h1>
-    <h2> Consulta médica</h2>
+</head>
+
+  <img src="img/logo.png" style="width: 200px; margin-left: 45%;" id="imagenLogo">
+
+  <h3>mediFore: medicina interna</h1>
+  <h4>Consulta médica</h2>
 
     <div class = "boton-logout">
-            <a href = "/opt/lampp/htdocs/TFG/logout.php">Cerrar sesión</a>
+      <a href = "logout.php">Cerrar sesión</a>
+    </div>
+    <div class = "boton-logoutP">
+          <a href = "loginPaciente.php">Cambiar paciente</a>
     </div>
 
-    <!--Configuro la barra de navegación -->
-    <header>
-      <nav> 
-        <ul>
-          <li>
-            <a class="nav-link" href="/opt/lampp/htdocs/TFG/inicio.php">Inicio </a>
-          </li>
-          <li>
-            <a class="nav-link" href="personalMedico.php">Datos personales médico</a>
-          </li>
-          <li>
-            <a class="nav-link" href="medicosPaciente.html">Datos pacientes</a>
-          </li>
-          <li>
-            <a class="nav-link" href="personalPaciente.php">Datos personales pacientes</a>
-          </li>
-          <li>
-            <a class="nav-link" href="informes.php">Informes</a>
-          </li>
-          <li>
-            <a class="nav-link" href="calendario.php">Calendario</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+<form action="cabecera.php" method="get">
+  <nav> <ul>
+      <li>
+        <a class="nav-link" href="inicio.php">Inicio </a>
+      </li>
+      <li>
+        <a class="nav-link" href="personalMedico.php">Datos personales médico</a>
+      </li>
+      {% if cargo == 1 %}
+        <li>
+          <a class="nav-link" href="medicosPaciente.php">Datos médicos pacientes</a>
+        </li>
+      {% endif %}
+      <li>
+        <a class="nav-link" href="personalPaciente.php">Datos personales pacientes</a>
+      </li>
+      {% if cargo == 1 %}
+        <li>
+          <a class="nav-link" href="informes.php">Informes</a>
+        </li>
+      {% endif %}
+      <li>
+        <a class="nav-link" href="calendario.php">Calendario</a>
+      </li>
+    </ul> </nav>
 
-    <div class="clearfix"></div>
-
-  <main>
+  <div class = "boton-logout">
+    <a href = "logout.php">Cerrar sesión</a>
+  </div>
