--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,11 @@
             <br>    
             <input class = "input_form" type="text" placeholder="Nombre de usuario..." name="username" required>
             <input class = "input_form" type="password" placeholder="Contraseña..." name="password" required>
-            <div class="errores-comentarios">
+            <div class="errores">
                 <p>{{error}}</p>
             </div>
             <button type="submit" class="botonLogin">Iniciar sesión</button>
-            <p class="message">¿No estás registrado? <a href="#">Create una cuenta </a></p>
+            <!--<p class="message">¿No estás registrado? <a href="#">Create una cuenta </a></p>-->
         </div>
     </div>
 </form>
